test/parse/fail/ambiguousIndent.em
# Ought to fail: I am not sure what happens after "c"
# Expect failure

a b (c
	d
	e)
f